--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
         </div>
         <p> Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
         <div class="Spiral-Zany">  
+          <h2>Spiral Zany</h2>
           <img src="images/spiral-zany.png" alt="Spiral Zany">
         </div>
         <p>Sriracha portland taxidermy cronut messenger bag, vegan distillery.Vapoware kickstarter air plant mumblecore food truck.</p>
         <div class="Melted-Rainbow">
+          <h2>Melted Rainbow</h2>
           <img src="images/melted-rainbow.png" alt="Melted Rainbow">
-        </div>
+        
           <p> Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p> 
+        </div>
         
       </article>
 
