--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-
+<body>
   <!-- TODO: Add header here -->
   <header>
     <div class="Pete Thinful|Artist">
@@ -96,4 +96,5 @@
   <footer>
    <p> © Pete Thinkful. All rights reserved.</p>
   </footer>
+</body>
 </html>
