--- a/index.html
+++ b/index.html
@@ -79,15 +79,16 @@
       <hr>
 
       <!-- TODO: Add Contact section here -->
-      <div>
+      <div class="contact">
         <h2>Contact</h2>
-      </div>
+      
         <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
         <ol>
           <li><a href="https://www.linkedin.com/in/pete-thinkful-a9b5a5b0/">LinkedIn</a></li>
           <li><a href="https://instagram.com/pete-thinkful">instagram</a></li>
           <li><a href="https://twitter.com/pete-thinkful">Twitter</a></li>
         </ol>
+      </div>
   
     
   
