--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <hr>
 
       <!-- TODO: Add Portfolio section here -->
-      <article>
-        <div class= "portfolio">
+      <article class= "portfolio">
+        <div>
           <h2>Portfolio</h2>
           <img src="images/abstract-red.png" alt="Abstract Red">
         </div>
