--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
           <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
     </header>
   
-          
+          <section>
+            <div>
         
         <p>I'm an artist living in Denver, Colorado.</p>
         <p>As an artist, I'm interested in:</p>
