--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+  <body>
 
 
   <!-- TODO: Add header here -->
@@ -103,6 +104,7 @@
   
     </div>
       </article>
+  </body>
   
 
   <!-- Footer section -->
