--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
 
       <!-- TODO: Add Portfolio section here -->
       <article>
-        <div>
+        <div class= "portfolio">
           <h2>Portfolio</h2>
           <h3>Abstract Red</h3>
           <img src="images/abstract-red.png" alt="Abstract Red">
         </div>
         <p> Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
-        <div>
+        <div class= "spiral-zany">
           <h2>Spiral Zany</h2>
           <img src="images/spiral-zany.png" alt="Spiral Zany">
         </div>
         <p>Sriracha portland taxidermy cronut messenger bag, vegan distillery.Vapoware kickstarter air plant mumblecore food truck.</p>
-        <div>
+        <div class= "melted-rainbow">
           <h2>Melted Rainbow</h2>
           <img src="images/melted-rainbow.png" alt="Melted Rainbow">
         </div>
