--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <hr>
 
       <!-- TODO: Add Contact section here -->
-      <div>
+      <div class= "social-links">
         <h2>Contact</h2>
         <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
         <ol>
