--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-					<img class="image-circle" src="images/image/pete-thinkful.png" alt="Pete Thinkful">
+					<img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
 
 				</div>
 				<div class="artist-statement">
@@ -70,17 +70,17 @@
 				</div>
 				<div class-item="Abstract-Red">
 					<h3>Abstract Red</h3>
-					<img src="images/image/abstract-red.png" alt="Abstract Red">
+					<img src="images/abstract-red.png" alt="Abstract Red">
 				</div>
 				<p> Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
 				<div class-item="Spiral-Zany">  
 					<h3>Spiral Zany</h3>
-					<img src="images/image/spiral-zany.png" alt="Spiral Zany">
+					<img src="images/spiral-zany.png" alt="Spiral Zany">
 				</div>
 				<p>Sriracha portland taxidermy cronut messenger bag, vegan distillery.Vapoware kickstarter air plant mumblecore food truck.</p>
 				<div class-item="Melted-Rainbow">
 					<h3>Melted Rainbow</h3>
-					<img src="images/image/melted-rainbow.png" alt="Melted Rainbow">
+					<img src="images/melted-rainbow.png" alt="Melted Rainbow">
 				</div>
 					<p> Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p> 
 				
