--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 		</nav>  
 	</header>
 
-		<div>
+		<div class= "about-section">
 
 			<h2>About</h2>
 			<h3>Hi! I'm Pete Thinkful</h3>
 		</div>  
+	<div class= "leftside-image-circle"> 
 
-			<div class="image-circle"> 
+			
 			<!-- TODO: Add About section here -->
 
 
