--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
 
 				</div>
-				<div class="artist-statement">
+				<div class="right-side-artist-statement">
 				<p>I'm an artist living in Denver, Colorado.</p>
 				<p>As an artist, I'm interested in:</p>
 				
