--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class= "about-section">
 
 			<h2>About</h2>
-			<h3>Hi! I'm Pete Thinkful</h3>
+			<h3 class = "align-right"><Hi! I'm Pete Thinkful</h3>
 		</div>  
 	<div class= "leftside-image-circle"> 
 
