--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 		<div class= "about-section">
 
-			<h2 class = "center-align"><About</h2>
-			<h3 class = "right-side"><Hi! I'm Pete Thinkful</h3>
+			<h2>About</h2>
+			<h3>Hi! I'm Pete Thinkful</h3>
 		</div>  
 	<div class= "leftside-image-circle"> 
 
