--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</ul>  
 					</div>
 				
-				<p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me.</a></p>  
+				<p class= "align-right"><Please feel free to take a look at my website and feel free to <a href="#contact">contact me.</a></p>  
 				
 					<h2>Pete's Background</h2>
 					<p>After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>
