--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me.</a></p>  
 				</div>
 					<h2 class= "center-align">Pete's Background</h2>
-					<p>After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>
+					<p class= "center-align">After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>
 					<p>If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.</p>  
 				</div>
 
