--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					
 				<p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me.</a></p>  
 				</div>
-	                              <div class= "center-align">
-					<h2 class= "center-align">Pete's Background</h2>
+	                              <div class= "center-align">Pete's Background>
+					<h2 class= "center-align"</h2>
 					<p class= "center-align">After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>
 					<p class= "center-align">If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.</p>  
 				</div>
