--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 	                              <div class= "center-align">
 					<h2 align= "center">Pete's Background</h2>
-					<h2 class= "center-align"</h2>"</h2>
+					<h2 class= "center-align"</h2>"
 					<p class= "center-align">After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.</p>
 					<p class= "center-align">If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.</p>  
 				</div>
