--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 				<div class= "portfolio">
 					<h2>Portfolio</h2>
 				</div>
-				<div class="row">
-                                <div class="column">
+				<div class-item = "Abstract Red">
+                                
 					<h3>Abstract Red</h3>
 					<img src="images/abstract-red.png" alt="Abstract Red">
 				</div>
