--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			
 
 			<!-- TODO: Add Portfolio section here -->
-			<article>
+			<div class = "p-container">
 				<div class= "portfolio">
 					<h2>Portfolio</h2>
 				</div>
