--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			
 
 			<!-- TODO: Add Portfolio section here -->
-	
+	<article>
 					<h2 class= "center-align">Portfolio</h2>
 			<div class = "container">
 				
@@ -88,7 +88,7 @@
 					<img src="images/melted-rainbow.png" alt="Melted Rainbow">
 				</div>
 					<p> Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p> 
-				
+	</article>
 
 			<hr>
 
