--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 			<!-- TODO: Add Portfolio section here -->
 	<article>
-					<h2 class= "center-align">Portfolio</h2>
+					<h2>Portfolio</h2>
 			<div class = "container">
 				
 				
